kubernetes/apps/home/raspberry-pi-client/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: raspberry-pi-client
  namespace: home
spec:
  selector:
    matchLabels:
      app: raspberry-pi-client
  replicas: 1
  template:
    metadata:
      labels:
        app: raspberry-pi-client
    spec:
      containers:
        - name: raspberry-pi-client
          image: ghcr.io/rustygreen/raspberry-pi-client:1.0.0-rc.18
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
