kubernetes/apps/home/raspberry-pi-client/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: raspberry-pi-client
  namespace: home
spec:
  ports:
    - port: 3000
      protocol: TCP
  selector:
    app:  raspberry-pi-client
