kubernetes/apps/home/raspberry-pi-client/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: raspberry-pi-client
  namespace: home
  annotations:
    hajimari.io/enable: "false"
    hajimari.io/icon: "raspberry-pi"
spec:
  rules:
    - host: pi.${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: raspberry-pi-client
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - pi.${SECRET_DOMAIN}
